RUNNER_ERROR.txt
Traceback (most recent call last):
  File "/home/runner/work/Toolhub-FloatBall/Toolhub-FloatBall/scripts/verify_changed_module_versions.py", line 109, in <module>
    main()
    ~~~~^^
  File "/home/runner/work/Toolhub-FloatBall/Toolhub-FloatBall/scripts/verify_changed_module_versions.py", line 48, in main
    exec(compile(cleanup_code, "pointer-color-settings-cleanup", "exec"), {"__name__": "__main__"})
         ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "pointer-color-settings-cleanup", line 1
    from pathlib import Path
IndentationError: unexpected indent
